Criacao da funcao de deposito, mas apresenta um erro de logica na adicao de mais um deposito